--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
 </head>
 
 <body>
-    
+    <section id="header">
+        <div class="header container">
+            <div class="brand">
+                <a href="#hero">
+                  <!-- <h1><span>S</span>haif <span>A</span>rfan</h1> -->
+                  <img src="images/logo.png" alt="logo"/>
+                </a>
+            </div>
+            <div class="nav-list">
+                <div class="hamburger">
+                    <i class="fa fa-bars"></i>
+                </div>
+                <ul>
+                    <li><a href="#hero" data-after="Home">Home</a></li>
+                    <li><a href="#services" data-after="Service">Services</a></li>
+                    <li><a href="#projects" data-after="Projects">Projects</a></li>
+                    <li><a href="#about" data-after="About">About</a></li>
+                    <li><a href="#contact" data-after="Contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="./app.js"></script>
