Update the header, and hero sections

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 </head>
 
 <body>
+    <!-- BEGIN HEADER SECTION -->
     <section id="header">
         <div class="header container">
             <div class="brand">
                 <a href="#hero">
                   <!-- <h1><span>S</span>haif <span>A</span>rfan</h1> -->
-                  <img src="images/logo.png" alt="logo"/>
+                  <img src="images/logo.png" alt="logo" class="logo"/>
                 </a>
             </div>
             <div class="nav-list">
@@ -33,6 +34,34 @@
             </div>
         </div>
     </section>
+    <!-- END HEADER SECTION -->
+
+    <!-- BEGIN HERO SECTION -->
+    <section id="hero">
+        <div class="hero container">
+            <div>
+                <h1 class="text-purple">Hi, I am</h1>
+                <br/>
+                <h1><span class="text-yellow">Hannah</span></h1>
+                <div class="typewriter text-beige">Turning Coffee into Code Magic</div>
+            </div>
+        </div>
+    </section>
+    <!-- END HERO SECTION -->
+
+    <!-- BEGIN ABOUT SECTION -->
+    <section id="about">
+        <div class="about container">
+            <div>
+                <h1>About Me</h1>
+                <p>Hey there! I’m Hannah, your friendly neighborhood web developer. 
+                    Since 2015, I’ve been on an exciting journey, turning coffee into code and ideas into amazing websites. 
+                    With a toolbox full of PHP, JavaScript, HTML, and CSS, I’m here to turn ideas into reality.
+                </p>
+            </div>
+        </div>
+    </section>
+    <!-- END ABOUT SECTION -->
 </body>
 <script src="./app.js"></script>
 </body>
