Add the tech stacks section

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 </div>
                 <ul>
                     <li><a href="#hero" data-after="Home">Home</a></li>
-                    <li><a href="#services" data-after="Service">Services</a></li>
-                    <li><a href="#projects" data-after="Projects">Projects</a></li>
                     <li><a href="#about" data-after="About">About</a></li>
-                    <li><a href="#contact" data-after="Contact">Contact</a></li>
+                    <li><a href="#tech_stacks" data-after="Tech Stacks">Tech Stacks</a></li>
+                    <!-- <li><a href="#projects" data-after="Projects">Projects</a></li>
+                    <li><a href="#contact" data-after="Contact">Contact</a></li> -->
                 </ul>
             </div>
         </div>
@@ -43,7 +43,7 @@
                 <h1 class="text-purple">Hi, I am</h1>
                 <br/>
                 <h1><span class="text-yellow">Hannah</span></h1>
-                <div class="typewriter text-beige">Turning Coffee into Code Magic</div>
+                <div class="typewriter text-beige">I'm a Web Developer. And I turn coffee into code magic.</div>
             </div>
         </div>
     </section>
@@ -62,6 +62,26 @@
         </div>
     </section>
     <!-- END ABOUT SECTION -->
+
+    <!-- BEGIN TECH STACKS SECTION -->
+    <section id="tech_stacks">
+        <div class="tech-stacks container">
+            <div>
+                <h1>Tech Stacks</h1>
+                <ul class="tech-stacks">
+                    <li><img src="images/html-stack.png" alt="HTML"/></li>
+                    <li><img src="images/php-stack.png" alt="PHP"/></li>
+                    <li><img src="images/wordpress-stack.png" alt="WordPress"/></li>
+                    <li><img src="images/webflow-stack.png" alt="Webflow"/></li>
+                    <li><img src="images/extension-stack.png" alt="Extensions"/></li>
+                    <li><img src="images/vuejs-stack.png" alt="VueJS"/></li>
+                    <li><img src="images/tailwindcss-stack.png" alt="tailwindcss"/></li>
+                    <li><img src="images/mean-stack.png" alt="MEAN Stack"/></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- END TECH STACKS SECTION -->
 </body>
 <script src="./app.js"></script>
 </body>
